# OpenCameraWithFFMPEG

./: CMakeLists.txt  README.md  main.cpp
